Bringing repo in line with project status as of today

--- a/conf/deepthought.config
+++ b/conf/deepthought.config
@@ -1,14 +1,14 @@
 params {
-    max_memory = 450.GB
-    max_cpus = 100
+    max_memory = 200.GB
+    max_cpus = 32
 }
 
 process {
     cache = 'lenient'
-    maxRetries = 10
-    // withLabel: io_heavy {
-        // maxForks=6
-    // }
+    maxRetries = 4
+    errorStrategy    = { task.exitStatus in [104,125,134,137,139,143,247] ? 'retry' : 'ignore' }
+    publish_dir_mode           = 'symlink'
+    // errorStrategy = 'ignore'
 
     if (!(params.skip_fastqc || params.skip_qc)) {
         withName:'.*:FASTQC_UMITOOLS_TRIMGALORE:FASTQC' {
@@ -59,45 +59,39 @@ process {
             withName: '.*:QUANTIFY_LEAFCUTTER:G2GTOOLS_CONVERT_JUNC' {
                 cpus = 1
                 memory = { 1.GB * task.attempt }
-                errorStrategy = 'ignore'
             }
 
             withName: '.*:QUANTIFY_LEAFCUTTER:LEAFCUTTER_CLUSTERINTRONS' {
                 cpus = 1
-                memory = {200.MB * task.attempt}
+                memory = {1.GB * task.attempt}
             }
         }
         
-        if (!params.skip_markduplicates) {
+        if ( ! params.skip_markduplicates ) {
             withName:'.*:MARK_DUPLICATES_PICARD:PICARD_MARKDUPLICATES'{
                 cpus = 1
                 memory = { ( 35.GB + ( 10.GB * task.attempt ) ) }
             }
         }
 
-        if (!params.skip_bigwig) {
+        if ( ! params.skip_bigwig ) {
             withName: 'BEDTOOLS_GENOMECOV' {
-                errorStrategy = 'ignore'
                 cpus = 2
-                memory = { 30.GB * task.attempt }
+                memory = { 25.GB * task.attempt }
             }
             withName:'.*:BEDGRAPH_TO_BIGWIG_FORWARD:UCSC_BEDCLIP' {
-                errorStrategy = 'ignore'
                 cpus = 1
                 memory = { 1.GB * task.attempt }
             }
             withName:'.*:BEDGRAPH_TO_BIGWIG_FORWARD:UCSC_BEDGRAPHTOBIGWIG' {
-                errorStrategy = 'ignore'
                 cpus = 1
                 memory = { 1.GB * task.attempt }    
             }
             withName:'.*:BEDGRAPH_TO_BIGWIG_REVERSE:UCSC_BEDCLIP' {
-                errorStrategy = 'ignore'
                 cpus = 1
                 memory = { 1.GB * task.attempt }
             }
             withName:'.*:BEDGRAPH_TO_BIGWIG_REVERSE:UCSC_BEDGRAPHTOBIGWIG' {
-                errorStrategy = 'ignore'
                 cpus = 1
                 memory = { 1.GB * task.attempt }
             }
@@ -114,21 +108,25 @@ process {
     if ((!params.skip_alignment && params.aligner == 'star_salmon') || params.pseudo_aligner == 'salmon') {
         if (!params.skip_alignment && params.aligner == 'star_salmon'){   
             withName:'.*:ALIGN_STAR:STAR_ALIGN|.*:ALIGN_STAR:STAR_ALIGN_IGENOMES' {
-                cpus = 12
-                memory = { ( 50.GB + ( 20.GB * task.attempt ) ) }
+                cpus = 16
                 time = 48.h
+                // if (params.use_personalized_references) {
+                    memory = { ( 70.GB + ( 20.GB * task.attempt ) ) }
+                // } else {
+                //     memory = { ( 50.GB + ( 20.GB * task.attempt ) ) }
+                // }
             }
         }
 
         withName:'.*:QUANTIFY.*SALMON:SALMON_QUANT' {
             cpus = 12
-            memory = { 40.GB * task.attempt }
+            memory = { 30.GB * task.attempt }
             time   = { 48.h  * task.attempt }
         }
 
         withName:'.*:QUANTIFY.*SALMON:SALMON_TXIMPORT' {
             cpus = 1
-            memory = { 5.GB * task.attempt }
+            memory = { 30.GB * task.attempt }
         }
         withName:'.*:QUANTIFY.*SALMON:SALMON_TX2GENE' {
             cpus = 1
@@ -148,66 +146,60 @@ process {
         // }
     }
 
-    if (params.use_personalized_references) {
-        withName: '.*PREPARE_PERSONALIZED_TRANSCRIPTOME:SEPARATE_AUTOSOMAL_CHROMS' {
+    // if (params.use_personalized_references) {
+        withName: '.*PERSONALIZE_REFERENCES:SEPARATE_AUTOSOMAL_CHROMS' {
             // cpus = { 6 * task.attempt }
             cpus = 1
             memory = { 1.GB * task.attempt }
         }
 
-        withName: '.*PREPARE_PERSONALIZED_TRANSCRIPTOME:VCF2VCI' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }
+        withName: '.*PERSONALIZE_REFERENCES:VCF2VCI' {
             // cpus = { 10 * task.attempt }
             cpus = 1
             memory = { 1500.MB * task.attempt }
-            errorStrategy = 'retry'
+            // errorStrategy = 'retry'
         }
 
-        withName: '.*PREPARE_PERSONALIZED_TRANSCRIPTOME:CONVERT' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }
+        withName: '.*PERSONALIZE_REFERENCES:CONVERT' {
             cpus = { 1 * task.attempt }
             memory = { 750.MB * task.attempt }
-            errorStrategy = 'retry'
+            // errorStrategy = 'retry'
         }
 
-        withName: '.*PREPARE_PERSONALIZED_TRANSCRIPTOME:PATCH_REF' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }
+        withName: '.*PERSONALIZE_REFERENCES:PATCH_REF' {
             // cpus = { 2 * task.attempt }
             cpus = 1
             memory = { 9.GB * task.attempt }
-            errorStrategy = 'retry'
+            // errorStrategy = 'retry'
         }
 
-        withName: '.*PREPARE_PERSONALIZED_TRANSCRIPTOME:TRANSFORM' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }
+        withName: '.*PERSONALIZE_REFERENCES:TRANSFORM' {
             // cpus = { 2 * task.attempt }
             cpus = 1
             memory = { 12.GB * task.attempt }
-            errorStrategy = 'retry'
+            // errorStrategy = 'retry'
         }
 
-        withName: '.*PREPARE_PERSONALIZED_TRANSCRIPTOME:GTF2DB' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }
+        withName: '.*PERSONALIZE_REFERENCES:GTF2DB' {
             cpus = { 1 * task.attempt }
             memory = { 100.MB * task.attempt }
-            errorStrategy = 'retry'
+            // errorStrategy = 'retry'
         }
 
-        withName: '.*PREPARE_PERSONALIZED_TRANSCRIPTOME:EXTRACT' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }
+        withName: '.*PERSONALIZE_REFERENCES:EXTRACT' {
             cpus = { 1 * task.attempt }
             memory = { 4.GB * task.attempt }
-            errorStrategy = 'retry'
+            // errorStrategy = 'retry'
         }
 
-        withName: '.*PREPARE_PERSONALIZED_TRANSCRIPTOME:SALMON_INDEX' {
-            cpus = { 6 * task.attempt }
-            memory = { 35.GB * task.attempt }
+        withName: '.*:PREPARE_GENOME:PERSONALIZE_REFERENCES:SALMON_INDEX' {
+            cpus = { 16 * task.attempt }
+            memory = { 85.GB * task.attempt }
             // cpus = { 1 + (12 * (task.attempt-1)) }
             // memory = { 1.GB + (35.GB * (task.attempt-1)) }
-            errorStrategy = 'retry'
+            // errorStrategy = 'retry'
         }
-    }
+    // }
 
     withName:'NFCORE_RNASEQ:RNASEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
         cpus = 1
@@ -220,11 +212,13 @@ process {
     }
 
     if (!params.skip_alignment && !params.skip_qc) {
-        if (!params.skip_preseq) {
+        i7f (!params.skip_preseq) {
             withName:'PRESEQ_LCEXTRAP' {
                 cpus = 1
                 errorStrategy = 'retry'
-                memory = { 16.GB * ( 2 ** ( task.attempt ) ) }
+                memory = { 4.GB * ( 2 ** ( task.attempt - 1) ) }
+                time = '4h' // One sample in our dataset just takes FOREVER (24+ hours) to run. Max time for all other samples is 4h or less.
+                maxRetries=6
                 // memory = { ( 40.GB * ( 2 ** ( task.attempt ) ) ) } // 4, 8, 16, 32, 64
             }
         }
@@ -235,7 +229,7 @@ process {
                 if (params.use_personalized_references) {
                     memory = { ( 10.GB * task.attempt ) }
                 } else {
-                    memory = { ( 5.GB * task.attempt ) }
+                    memory = { ( 10.GB * task.attempt ) }
                 }
             }
         }
@@ -259,56 +253,56 @@ process {
         }
     }
 
-    if (! params.skip_rseqc){
-        if ('bam_stat' in params.rseqc_modules.split(',')) {
-            withName:'.*:RSEQC:RSEQC_BAMSTAT' {
-                cpus = 1
-                memory = { 50.MB * task.attempt }
-            }
-        }
+    // if (! params.skip_rseqc){
+    //     if ('bam_stat' in params.rseqc_modules.split(',')) {
+    //         withName:'.*:RSEQC:RSEQC_BAMSTAT' {
+    //             cpus = 1
+    //             memory = { 50.MB * task.attempt }
+    //         }
+    //     }
 
-        if ('infer_experiment' in params.rseqc_modules.split(',')){
-            withName:'.*:RSEQC:RSEQC_INFEREXPERIMENT' {
-                cpus = 1
-                memory = { 100.MB * task.attempt }
-            }
-        }
+    //     if ('infer_experiment' in params.rseqc_modules.split(',')){
+    //         withName:'.*:RSEQC:RSEQC_INFEREXPERIMENT' {
+    //             cpus = 1
+    //             memory = { 100.MB * task.attempt }
+    //         }
+    //     }
 
-        if ('junction_annotation' in params.rseqc_modules.split(',')){
-            withName:'.*:RSEQC:RSEQC_JUNCTIONANNOTATION' {
-                cpus = 1
-                memory = { 300.MB * task.attempt }
-            }
-        }
+    //     if ('junction_annotation' in params.rseqc_modules.split(',')){
+    //         withName:'.*:RSEQC:RSEQC_JUNCTIONANNOTATION' {
+    //             cpus = 1
+    //             memory = { 300.MB * task.attempt }
+    //         }
+    //     }
 
-        if ('junction_saturation' in params.rseqc_modules.split(',')) {
-            withName:'.*:RSEQC:RSEQC_JUNCTIONSATURATION' {
-                cpus = 1
-                memory = { 1250.MB * task.attempt }
-            }
-        }
+    //     if ('junction_saturation' in params.rseqc_modules.split(',')) {
+    //         withName:'.*:RSEQC:RSEQC_JUNCTIONSATURATION' {
+    //             cpus = 1
+    //             memory = { 1250.MB * task.attempt }
+    //         }
+    //     }
 
-        if ('read_duplication' in params.rseqc_modules.split(',')) {
-            withName:'.*:RSEQC:RSEQC_READDUPLICATION' {
-                cpus = 1
-                memory = { 18.GB * task.attempt } 
-            }
-        }
+    //     if ('read_duplication' in params.rseqc_modules.split(',')) {
+    //         withName:'.*:RSEQC:RSEQC_READDUPLICATION' {
+    //             cpus = 1
+    //             memory = { 18.GB * task.attempt } 
+    //         }
+    //     }
 
-        if ('read_distribution' in params.rseqc_modules.split(',') && !params.bam_csi_index) {
-            withName:'.*:RSEQC:RSEQC_READDISTRIBUTION' {
-                cpus = 1
-                memory = { 1500.MB * task.attempt }
-            }
-        }
+    //     if ('read_distribution' in params.rseqc_modules.split(',') && !params.bam_csi_index) {
+    //         withName:'.*:RSEQC:RSEQC_READDISTRIBUTION' {
+    //             cpus = 1
+    //             memory = { 1750.MB * task.attempt }
+    //         }
+    //     }
 
-        if ('inner_distance' in params.rseqc_modules.split(',') && !params.bam_csi_index) {
-            withName:'.*:RSEQC:RSEQC_INNERDISTANCE' {
-                cpus = 1
-                memory = { 1500.MB * task.attempt }
-            }
-        }   
-    }
+    //     if ('inner_distance' in params.rseqc_modules.split(',') && !params.bam_csi_index) {
+    //         withName:'.*:RSEQC:RSEQC_INNERDISTANCE' {
+    //             cpus = 1
+    //             memory = { 1500.MB * task.attempt }
+    //         }
+    //     }   
+    // }
 
     if ( !params.skip_mbv ) {
         withName: '.*:QTLTOOLS_MBV' {
@@ -327,4 +321,4 @@ executor {
 }
 
 
-docker.runOptions      = "--rm --init -u 1329312471 --memory-swappiness 1"
+docker.runOptions      = "--rm --init -u 1329312471"
