--- a/conf/modules.config
+++ b/conf/modules.config
@@ -147,54 +147,55 @@ process {
 
 
     if (params.use_personalized_references) {
-        withName: 'VCF2VCI' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }        
-        }
+        // withName: 'VCF2VCI' {
+        //     ext.prefix = { "${meta.id}" }        
+        // }
 
-        withName: 'CONVERT' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}_specific" }        
-        }
+        // withName: 'CONVERT' {
+        //     ext.prefix = { "${meta.id}" }        
+        // }
 
-        withName: 'PATCH_REF' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }        
-        }
+        // withName: 'PATCH_REF' {
+        //     ext.prefix = { "${meta.id}" }        
+        // }
 
-        withName: 'TRANSFORM' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }
-        }
+        // withName: 'TRANSFORM' {
+        //     ext.prefix = { "${meta.id}" }
+        // }
 
-        withName: 'GTF2DB' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }
-        }
+        // withName: 'GTF2DB' {
+        //     ext.prefix = { "${meta.id}" }
+        // }
 
-        withName: 'EXTRACT' {
-            ext.prefix = { "${meta.id}-${meta.ploidy}" }
-        }
+        // withName: 'EXTRACT' {
+        //     ext.prefix = { "${meta.id}" }
+        // }
 
         withName: 'MERGE_DIPLOID_HAPLOID_REFS'{
-            publishDir = [
-                path: { "${params.outdir}/reference_genome/${meta.id}" },
-                mode: params.publish_dir_mode,
-                enabled: params.save_personalized_references,
-                pattern: "*.{fa.gz,fai,gzi,gtf,gtf.gz,vci.gz,tbi}"
-            ]
+            // publishDir = [
+            //     path: { "${params.outdir}/reference_genome/${meta.id}" },
+            //     mode: params.publish_dir_mode,
+            //     enabled: params.save_personalized_references,
+            //     pattern: "*.{fa.gz,fai,gzi,gtf,gtf.gz,vci.gz,tbi}"
+            // ]
         }
     }
 
-    withName: 'SALMON_INDEX' {
-        ext.args = params.use_personalized_references ? "--keepDuplicates" : ""
-        if (params.use_personalized_references && params.save_personalized_references) {
-            publishDir = [
-                path: { "${params.outdir}/reference_genome/${meta.id}" },
-                mode: params.publish_dir_mode
-            ]
-        } else if (params.save_reference) {
-            publishDir = [
-                path: { "${params.outdir}/reference_genome/" },
-                mode: params.publish_dir_mode
-            ]
-        }
+    withName: '.*:PREPARE_GENOME:PERSONALIZE_REFERENCES:SALMON_INDEX' {
+        ext.args = '--keepDuplicates'
+        // if (params.save_personalized_references) {
+        //     publishDir = [
+        //         path: { "${params.outdir}/reference_genome/${meta.id}" },
+        //         mode: params.publish_dir_mode
+        //     ]
+        // } else if (params.save_reference) {
+        //     publishDir = [
+        //         path: { "${params.outdir}/reference_genome/" },
+        //         mode: params.publish_dir_mode
+        //     ]
+        // }
     }
+    
 
     if (!params.skip_bbsplit && params.bbsplit_fasta_list) {
         process {
@@ -386,12 +387,12 @@ if (!params.skip_alignment) {
                 ]
             }
 
-            if (params.use_personalized_references) {
-                withName: "NFCORE_RNASEQ:RNASEQ:QUANTIFY_LEAFCUTTER:G2GTOOLS_CONVERT_JUNC" {
+            // if (params.use_personalized_references) {
+                withName: '.*:QUANTIFY_LEAFCUTTER:G2GTOOLS_CONVERT_JUNC' {
                     ext.prefix = { "${meta.id}.ref_coords" }
                     ext.args = { '--reverse' }
                 }
-            }
+            // }
             
             withName: '.*:QUANTIFY_LEAFCUTTER:LEAFCUTTER_CLUSTERINTRONS' {
                 ext.args = { '--nochromcheck' }
