--- a/nextflow.config
+++ b/nextflow.config
@@ -105,8 +105,7 @@ params {
     monochrome_logs            = false
     help                       = false
     igenomes_base              = 's3://ngi-igenomes/igenomes'
-    tracedir                   = "${params.outdir}/pipeline_info"
-    publish_dir_mode           = 'copy'
+    publish_dir_mode           = 'symlink'
     igenomes_ignore            = false
     validate_params            = true
     show_hidden_params         = false
@@ -218,6 +217,8 @@ env {
     R_ENVIRON_USER   = "/.Renviron"
     JULIA_DEPOT_PATH = "/usr/local/share/julia"
 }
+
+params.tracedir                   = "${params.outdir}/pipeline_info"
 
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
